fix(multitenancy): proteger itens de serviço da OS por tenant